Corrected hover color to be legible.

--- a/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_sidebars.scss
+++ b/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_sidebars.scss
@@ -56,6 +56,10 @@
                     >a {
                         color: $cb-semantic-color-font-base;
                         font-weight: bold;
+                        
+                        &:hover, &:focus {
+                            color: $cb-component-sidebar-link-color-hover;
+                        }
                     }
                 }
             }
